commit new brach

--- a/config/config.ini
+++ b/config/config.ini
@@ -3,12 +3,7 @@ host = 127.0.0.1
 port = 3306
 username = root
 password =
-dbname =
-
-[Solr]
-solr_url = 192.168.100.18:8983/solr
-solr_forum_url = 192.168.100.18:8983/solr/forum
-solr_account_url = 192.168.100.18:8983/solr
+dbname = news_crawler
 
 [Timezone]
 default_tz = Asia/Jakarta
@@ -39,23 +34,27 @@ args = (sys.stderr,)
 [formatter_formatter]
 format = %(asctime)s %(name)-12s %(levelname)-8s %(message)s
 
-[Postmark]
-apikey =
-sender = admin@sonar.id
-sendername = Sonar Platform
-replyto = support@sonar.id
-replytoname = Sonar Platform Support
-
-[ExcelReport]
-reportdir = /Users/mridwana/Project/hello-world-python/logs
-#reportdir=/home/app/backend/sonar-python/logs
-
-[Nltk]
-tokenizer_path = /Users/mridwana/nltk_data/tokenizers/punkt/english.pickle
-
-[FacebookGraph]
-url = https://graph.facebook.com
-version = v3.0
-
 [Selenium]
 chromedriver_path = C:\Users\ASUS\Downloads\chromedriver_win32\chromedriver.exe
+
+[krjogja]
+title_tag = h1
+title_class= single-header__title
+date_tag = div
+date_class = post-date
+editor = 'div', class_='editor'
+newscontent = 'div', class_='content'
+iframefb = './/iframe[@class="i-amphtml-fill-content"]'
+#i dunno mau input apa disini
+
+[todayonline]
+title_tag = h1
+title_class = article-detail_title
+date_tag = div
+date_class = article-detail_bylinepublish
+editor_tag = span
+editor_class = today-author
+newscontent_tag = div
+newscontent_class = article-detail_body
+share_tag = p
+share_class = share-count-common share-count
