--- a/config/config.ini
+++ b/config/config.ini
@@ -38,16 +38,24 @@ format = %(asctime)s %(name)-12s %(levelname)-8s %(message)s
 chromedriver_path = C:\Users\ASUS\Downloads\chromedriver_win32\chromedriver.exe
 
 [krjogja]
+recompile = ^https://
 title_tag = h1
 title_class= single-header__title
 date_tag = div
 date_class = post-date
-editor = 'div', class_='editor'
-newscontent = 'div', class_='content'
-iframefb = './/iframe[@class="i-amphtml-fill-content"]'
-#i dunno mau input apa disini
+editor_tag = div
+editor_class = editor
+newscontent_tag = div
+newscontent_class = content
+page_tag = div
+page_class = pagination
+share_tag
+share_class
+iframefb = .//iframe[@class="i-amphtml-fill-content"]
+
 
 [todayonline]
+recompile = ^/singapore/
 title_tag = h1
 title_class = article-detail_title
 date_tag = div
@@ -56,5 +64,8 @@ editor_tag = span
 editor_class = today-author
 newscontent_tag = div
 newscontent_class = article-detail_body
+page_tag
+page_class
 share_tag = p
-share_class = share-count-common share-count
+share_class = share-count-common
+iframefb
